# anshim

./: .gitignore  HANDOFF.md  LICENSE  README.md  __init__.py  anshim_report_91dba385.html  anshim_report_dd231886.html  pyproject.toml
anshim/: __init__.py  __main__.py  pyproject.toml
anshim/cli/: __init__.py
anshim/cli/commands/: __init__.py  init.py  models.py  scan.py
anshim/core/: __init__.py
anshim/core/analyzers/: __init__.py  bandit_analyzer.py  models.py  rule_based.py  semgrep_analyzer.py
anshim/core/compliance/: __init__.py
anshim/core/db/: __init__.py  database.py  models.py
anshim/core/models/: __init__.py
anshim/core/prompts/: __init__.py
anshim/core/reporters/: __init__.py
cli/commands/: init.py  models.py  report.py  scan.py  serve.py
core/analyzers/: __init__.py  bandit_analyzer.py  hybrid.py  llm_analyzer.py  models.py  rule_based.py  semgrep_analyzer.py
core/api/: __init__.py  schemas.py  server.py
core/compliance/: __init__.py  loader.py  mapper.py
core/db/: __init__.py  database.py  models.py  repository.py
core/models/: __init__.py  ollama_client.py  registry.py
core/prompts/ko/: __init__.py  attack_scenario.jinja2  fix_suggestion.jinja2  vulnerability_analysis.jinja2
core/reporters/: __init__.py  base.py  excel_reporter.py  html_reporter.py  json_reporter.py
core/utils/: __init__.py  config_manager.py  hardware.py
docs/: PORTFOLIO.md  architecture.md  compliance_mapping.md  rules.md
docs/demo/: DEMO_SCRIPT.md  demo_scan.bat  demo_scan.sh
docs/demo/demo_target/: app.py
reports/templates/: report.html.j2
rules/compliance/2.x_protection_measures/: 2.10.1-sql-injection.yaml  2.10.2-xss.yaml  2.10.3-csrf.yaml  2.10.4-file-upload.yaml  2.11.1-weak-password.yaml  2.7.1-weak-cryptography.yaml  2.7.2-hardcoded-keys.yaml  2.9.1-debug-exposure.yaml
rules/compliance/3.x_personal_info/: 3.2.1-personal-info-encryption.yaml  3.3.1-personal-info-storage.yaml
rules/cwe/: CWE-79-xss.yaml  CWE-798-hardcoded-credentials.yaml  CWE-89-sql-injection.yaml
rules/owasp/: A01-broken-access-control.yaml  A02-cryptographic-failures.yaml  A03-injection.yaml  A07-authentication-failure.yaml  A09-logging-monitoring.yaml
src/anshim/cli/: main.py
src/anshim/cli/commands/: scan.py  serve.py
src/anshim/core/analyzers/: bandit_analyzer.py  semgrep_analyzer.py
tests/: __init__.py  conftest.py  test_api.py  test_cli.py  test_compliance_mapper.py  test_db.py  test_hybrid.py  test_llm_analyzer.py  test_reporters.py  test_rule_based.py
tests/fixtures/: vulnerable_java.java  vulnerable_javascript.js  vulnerable_python.py
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
web/app/scans/[id]/: page.tsx
web/app/scans/[id]/vulnerabilities/[vid]/: page.tsx
web/components/: ComplianceChart.tsx  ScanStatusBadge.tsx  SeverityBadge.tsx
web/lib/: api.ts  types.ts
