[project]
name = "anshim"
version = "0.2.0"
description = "한국 기업을 위한 로컬 LLM 기반 보안 코드 감사 도구 (ISMS/ISMS-P 컴플라이언스 매핑)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "AnShim Contributors" }
]
keywords = [
    "security",
    "sast",
    "code-audit",
    "llm",
    "isms",
    "isms-p",
    "compliance",
    "korean",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Natural Language :: Korean",
]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "sqlalchemy>=2.0.0",
    "jinja2>=3.1.0",
    "semgrep>=1.45.0",
    "bandit>=1.7.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "httpx>=0.25.0",
    "openpyxl>=3.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
anshim = "anshim.cli.main:app"

[project.urls]
Homepage = "https://github.com/lxxexxbbb/anshim"
Documentation = "https://github.com/lxxexxbbb/anshim/tree/main/docs"
Repository = "https://github.com/lxxexxbbb/anshim"
Issues = "https://github.com/lxxexxbbb/anshim/issues"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".."]
include = ["anshim*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "S",      # flake8-bandit (security)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # typer.Option/Argument in function defaults (Typer 표준 패턴)
]

[tool.ruff.lint.isort]
known-first-party = ["anshim"]

[tool.ruff.lint.per-file-ignores]
# 테스트 파일에서는 assert 사용이 표준 패턴이므로 S101(flake8-bandit)을 제외
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
# SQLAlchemy 레거시 declarative 스타일(Column())은 mypy가 'var-annotated' 오류를
# 발생시키지만 런타임에는 정상 동작한다. 전체 모델을 mapped_column()/Mapped[]
# 방식으로 마이그레이션하기 전까지는 이 모듈의 var-annotated 오류를 억제한다.
module = "anshim.core.db.models"
warn_return_any = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=. --cov-report=term-missing"
